Issue IMCMS-576 RB6: More chars in ID and PW - Cut text if login is too long. Show it on hover

--- a/src/main/webapp/imcms/css/admin/imcms-super-admin.css
+++ b/src/main/webapp/imcms/css/admin/imcms-super-admin.css
@@ -116,6 +116,12 @@
     padding: 5px;
 }
 
+.imcms-user-info-row__user-name{
+    text-overflow:ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 .imcms-user-info-row .imcms-control {
     margin: 5px;
 }
